:wheelchair: FIx contrast for time color

--- a/styles/components/home.scss
+++ b/styles/components/home.scss
@@ -152,7 +152,7 @@
 
   time,
   .meta {
-    color: rgba(100, 100, 100, 0.75);
+    opacity: 0.75;
   }
 
   .meta {
